APTI-20 Endpoint para vallidar token de recuperar contraseña v1.0
